# docx-validator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-conda.yml  build-wheel.yml  docs.yml  test-github-models.yml  test.yml
docs/: api.rst  conf.py  development.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docx_tex_validator/: __init__.py  cli.py  parser.py  validator.py
docx_tex_validator/backends/: __init__.py  base.py  nebulaone.py  openai.py
docx_tex_validator/parsers/: __init__.py  base.py  docx_parser.py  html_parser.py  latex_parser.py
docx_validator/: __init__.py  cli.py  parser.py  validator.py
docx_validator/backends/: nebulaone.py  openai.py
docx_validator/parsers/: __init__.py  base.py  docx_parser.py  latex_parser.py
examples/: BACKENDS.md  FORMAT_SUPPORT.md  README.md  demo_logging.py  demo_multi_format.py  multi_format_specs.json  sample_document.html  sample_document.tex  sample_specifications.json  structured_document_specifications.json
tests/: __init__.py  test_logging.py  test_parsers.py  test_validator.py  test_version.py
