[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-tex-validator"
dynamic = ["version"]
description = "A Python library and CLI tool that uses LLMs to validate documents (DOCX, HTML, LaTeX/TeX) against specification requirements"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "GB119"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic-ai>=0.0.1",
    "python-docx>=1.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.9.0",
    "TexSoup>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-better-theme>=0.1.5",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.scripts]
doc_validator = "docx_tex_validator.cli:main"

[project.urls]
Homepage = "https://github.com/gb119/docx-tex-validator"
Repository = "https://github.com/gb119/docx-tex-validator"

[tool.setuptools.packages.find]
where = ["."]
include = ["docx_tex_validator*"]

[tool.setuptools.dynamic]
version = {attr = "docx_tex_validator.__version__"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
